[package]
name = "flamewire-bittensor-indexer"
version = "0.1.1"
license = "Apache-2.0"
authors = ["Flamewire <contact@flamewire.io>"]
edition = "2021"
description = "Rust Flamewire Indexer for Bittensor"
keywords = ["flamewire", "indexer", "bittensor", "blockchain"]
repository = "https://github.com/unitone-labs/bittensor-indexer"
readme = "README.md"
rust-version = "1.88.0"

[package.metadata]
copyright = "Copyright 2025 Flamewire"

[dependencies]
subxt = { version = "0.42.1", features = ["unstable-light-client"] }
tokio = { version = "1.46.1", features = ["full"] }
async-trait = "0.1.88"
tracing = "0.1.41"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "macros",
] }
url = "2.5.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
thiserror = "2.0.12"
futures = "0.3.31"
tracing-subscriber = "0.3.19"
scale-value = "0.18.0"
scale-decode = { version = "0.16.0", features = ["derive"] }
parity-scale-codec = { version = "3.7.5", features = ["derive"] }


[features]
default = ["json-storage"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
json-storage = ["serde_json"]
testing = []

[lib]
name = "flamewire_bittensor_indexer"
path = "src/lib.rs"

[dev-dependencies]
scale-info = { version = "2.11.6", features = ["derive"] }
frame-metadata = "23.0.0"
subxt-metadata = "0.42.1"
tempfile = "3.20.0"
proptest = "1.7.0"
once_cell = "1.21.3"
